rest-fights/deploy/k8s/java21-openshift-all-downstream.yml
#######################################################################
# THIS FILE IS AUTOMATICALLY GENERATED DURING CI/CD.
# ANY LOCAL CHANGES YOU MAKE SHOULD NOT BE COMMITTED TO SOURCE CONTROL.
#######################################################################

#######################################################################
# THIS FILE IS AUTOMATICALLY GENERATED DURING CI/CD.
# ANY LOCAL CHANGES YOU MAKE SHOULD NOT BE COMMITTED TO SOURCE CONTROL.
#######################################################################

---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: villains-db
    application: villains-service
    system: quarkus-super-heroes
  name: villains-db
spec:
  ports:
    - port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    name: villains-db
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.openshift.io/vcs-uri: <<unknown>>
    app.quarkus.io/vcs-ref: main
    app.openshift.io/vcs-ref: main
    app.openshift.io/connects-to: "villains-db,otel-lgtm"
    app.quarkus.io/vcs-url: https://github.com/quarkusio/quarkus-super-heroes
    app.openshift.io/vcs-url: https://github.com/quarkusio/quarkus-super-heroes
    app.quarkus.io/quarkus-version: 3.36.1
    app.quarkus.io/vcs-uri: https://github.com/quarkusio/quarkus-super-heroes.git
    app.quarkus.io/build-timestamp: 2026-06-12 - 20:42:35 +0000
  labels:
    app.kubernetes.io/name: rest-villains
    app.kubernetes.io/part-of: villains-service
    app.kubernetes.io/version: java21-latest
    app: rest-villains
    application: villains-service
    system: quarkus-super-heroes
    app.kubernetes.io/managed-by: quarkus
    app.openshift.io/runtime: quarkus
  name: rest-villains
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8084
  selector:
    app.kubernetes.io/name: rest-villains
    app.kubernetes.io/part-of: villains-service
    app.kubernetes.io/version: java21-latest
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: villains-db
    application: villains-service
    system: quarkus-super-heroes
    app.kubernetes.io/part-of: villains-service
    app.openshift.io/runtime: postgresql
  name: villains-db
spec:
  replicas: 1
  selector:
    matchLabels:
      name: villains-db
  template:
    metadata:
      annotations:
        alpha.image.policy.openshift.io/resolve-names: '*'
      labels:
        application: villains-service
        name: villains-db
    spec:
      containers:
        - envFrom:
            - secretRef:
                name: villains-db-config
          image: postgres:18
          name: villains-db
          ports:
            - containerPort: 5432
          resources:
            limits:
              memory: 128Mi
            requests:
              memory: 32Mi
          volumeMounts:
            - mountPath: /var/lib/postgresql
              name: villains-db-data
            - mountPath: /docker-entrypoint-initdb.d
              name: villains-db-init-data
      volumes:
        - emptyDir: {}
          name: villains-db-data
        - emptyDir: {}
          name: villains-db-init-data
        - configMap:
            name: villains-db-init
          name: villains-db-init
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.openshift.io/vcs-uri: <<unknown>>
    app.quarkus.io/vcs-ref: main
    app.openshift.io/vcs-ref: main
    app.openshift.io/connects-to: "villains-db,otel-lgtm"
    app.quarkus.io/vcs-url: https://github.com/quarkusio/quarkus-super-heroes
    app.openshift.io/vcs-url: https://github.com/quarkusio/quarkus-super-heroes
    app.quarkus.io/quarkus-version: 3.36.1
    app.quarkus.io/vcs-uri: https://github.com/quarkusio/quarkus-super-heroes.git
    app.quarkus.io/build-timestamp: 2026-06-12 - 20:42:35 +0000
  labels:
    app: rest-villains
    application: villains-service
    system: quarkus-super-heroes
    app.kubernetes.io/managed-by: quarkus
    app.openshift.io/runtime: quarkus
    app.kubernetes.io/part-of: villains-service
    app.kubernetes.io/name: rest-villains
    app.kubernetes.io/version: java21-latest
  name: rest-villains
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/part-of: villains-service
      app.kubernetes.io/name: rest-villains
      app.kubernetes.io/version: java21-latest
  template:
    metadata:
      annotations:
        alpha.image.policy.openshift.io/resolve-names: '*'
        app.openshift.io/vcs-uri: <<unknown>>
        app.quarkus.io/vcs-ref: main
        app.openshift.io/vcs-ref: main
        app.openshift.io/connects-to: "villains-db,otel-lgtm"
        app.quarkus.io/vcs-url: https://github.com/quarkusio/quarkus-super-heroes
        app.openshift.io/vcs-url: https://github.com/quarkusio/quarkus-super-heroes
        app.quarkus.io/quarkus-version: 3.36.1
        app.quarkus.io/vcs-uri: https://github.com/quarkusio/quarkus-super-heroes.git
        app.quarkus.io/build-timestamp: 2026-06-12 - 20:42:35 +0000
      labels:
        app: rest-villains
        application: villains-service
        system: quarkus-super-heroes
        app.kubernetes.io/managed-by: quarkus
        app.openshift.io/runtime: quarkus
        app.kubernetes.io/part-of: villains-service
        app.kubernetes.io/name: rest-villains
        app.kubernetes.io/version: java21-latest
    spec:
      containers:
        - env:
            - name: QUARKUS_OTEL_K8S_RESOURCE_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: QUARKUS_OTEL_K8S_RESOURCE_POD_NAME
              valueFrom:
                fieldRef:
                  fieldPath: metadata.name
            - name: QUARKUS_OTEL_K8S_RESOURCE_POD_UID
              valueFrom:
                fieldRef:
                  fieldPath: metadata.uid
            - name: QUARKUS_OTEL_K8S_RESOURCE_NODE_NAME
              valueFrom:
                fieldRef:
                  fieldPath: spec.nodeName
            - name: QUARKUS_OTEL_K8S_RESOURCE_CONTAINER_NAME
              value: rest-villains
            - name: QUARKUS_OTEL_K8S_RESOURCE_DEPLOYMENT_NAME
              value: rest-villains
          image: quay.io/quarkus-super-heroes/rest-villains:java21-latest
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/live
              port: 8084
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          name: rest-villains
          ports:
            - containerPort: 8084
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/ready
              port: 8084
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          resources:
            limits:
              memory: 768Mi
            requests:
              memory: 256Mi
          startupProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/started
              port: 8084
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
      terminationGracePeriodSeconds: 10
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    app.openshift.io/vcs-uri: <<unknown>>
    app.quarkus.io/vcs-ref: main
    app.openshift.io/vcs-ref: main
    app.openshift.io/connects-to: "villains-db,otel-lgtm"
    app.quarkus.io/vcs-url: https://github.com/quarkusio/quarkus-super-heroes
    app.openshift.io/vcs-url: https://github.com/quarkusio/quarkus-super-heroes
    app.quarkus.io/quarkus-version: 3.36.1
    app.quarkus.io/vcs-uri: https://github.com/quarkusio/quarkus-super-heroes.git
    app.quarkus.io/build-timestamp: 2026-06-12 - 20:42:35 +0000
  labels:
    app.kubernetes.io/name: rest-villains
    app.kubernetes.io/part-of: villains-service
    app.kubernetes.io/version: java21-latest
    app: rest-villains
    application: villains-service
    system: quarkus-super-heroes
    app.kubernetes.io/managed-by: quarkus
    app.openshift.io/runtime: quarkus
  name: rest-villains
spec:
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: rest-villains
#######################################################################
# THIS FILE IS AUTOMATICALLY GENERATED DURING CI/CD.
# ANY LOCAL CHANGES YOU MAKE SHOULD NOT BE COMMITTED TO SOURCE CONTROL.
#######################################################################

---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: heroes-db
    application: heroes-service
    system: quarkus-super-heroes
  name: heroes-db
spec:
  ports:
    - port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    name: heroes-db
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.openshift.io/vcs-uri: <<unknown>>
    app.quarkus.io/vcs-ref: main
    app.openshift.io/vcs-ref: main
    app.openshift.io/connects-to: "heroes-db,otel-lgtm"
    app.quarkus.io/vcs-url: https://github.com/quarkusio/quarkus-super-heroes
    app.openshift.io/vcs-url: https://github.com/quarkusio/quarkus-super-heroes
    app.quarkus.io/quarkus-version: 3.36.1
    app.quarkus.io/vcs-uri: https://github.com/quarkusio/quarkus-super-heroes.git
    app.quarkus.io/build-timestamp: 2026-06-12 - 20:43:19 +0000
  labels:
    app.kubernetes.io/name: rest-heroes
    app.kubernetes.io/part-of: heroes-service
    app.kubernetes.io/version: java21-latest
    app: rest-heroes
    application: heroes-service
    system: quarkus-super-heroes
    app.kubernetes.io/managed-by: quarkus
    app.openshift.io/runtime: quarkus
  name: rest-heroes
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8083
  selector:
    app.kubernetes.io/name: rest-heroes
    app.kubernetes.io/part-of: heroes-service
    app.kubernetes.io/version: java21-latest
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: heroes-db
    application: heroes-service
    system: quarkus-super-heroes
    app.kubernetes.io/part-of: heroes-service
    app.openshift.io/runtime: postgresql
  name: heroes-db
spec:
  replicas: 1
  selector:
    matchLabels:
      name: heroes-db
  template:
    metadata:
      annotations:
        alpha.image.policy.openshift.io/resolve-names: '*'
      labels:
        name: heroes-db
        application: heroes-service
        system: quarkus-super-heroes
    spec:
      containers:
        - envFrom:
            - secretRef:
                name: heroes-db-config
          image: postgres:18
          name: heroes-db
          ports:
            - containerPort: 5432
          resources:
            limits:
              memory: 128Mi
            requests:
              memory: 32Mi
          volumeMounts:
            - mountPath: /var/lib/postgresql
              name: heroes-db-data
            - mountPath: /docker-entrypoint-initdb.d
              name: heroes-db-init-data
      volumes:
        - emptyDir: {}
          name: heroes-db-data
        - emptyDir: {}
          name: heroes-db-init-data
        - configMap:
            name: heroes-db-init
          name: heroes-db-init
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.openshift.io/vcs-uri: <<unknown>>
    app.quarkus.io/vcs-ref: main
    app.openshift.io/vcs-ref: main
    app.openshift.io/connects-to: "heroes-db,otel-lgtm"
    app.quarkus.io/vcs-url: https://github.com/quarkusio/quarkus-super-heroes
    app.openshift.io/vcs-url: https://github.com/quarkusio/quarkus-super-heroes
    app.quarkus.io/quarkus-version: 3.36.1
    app.quarkus.io/vcs-uri: https://github.com/quarkusio/quarkus-super-heroes.git
    app.quarkus.io/build-timestamp: 2026-06-12 - 20:43:19 +0000
  labels:
    app: rest-heroes
    application: heroes-service
    system: quarkus-super-heroes
    app.kubernetes.io/managed-by: quarkus
    app.openshift.io/runtime: quarkus
    app.kubernetes.io/name: rest-heroes
    app.kubernetes.io/version: java21-latest
    app.kubernetes.io/part-of: heroes-service
  name: rest-heroes
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: rest-heroes
      app.kubernetes.io/version: java21-latest
      app.kubernetes.io/part-of: heroes-service
  template:
    metadata:
      annotations:
        alpha.image.policy.openshift.io/resolve-names: '*'
        app.openshift.io/vcs-uri: <<unknown>>
        app.quarkus.io/vcs-ref: main
        app.openshift.io/vcs-ref: main
        app.openshift.io/connects-to: "heroes-db,otel-lgtm"
        app.quarkus.io/vcs-url: https://github.com/quarkusio/quarkus-super-heroes
        app.openshift.io/vcs-url: https://github.com/quarkusio/quarkus-super-heroes
        app.quarkus.io/quarkus-version: 3.36.1
        app.quarkus.io/vcs-uri: https://github.com/quarkusio/quarkus-super-heroes.git
        app.quarkus.io/build-timestamp: 2026-06-12 - 20:43:19 +0000
      labels:
        app: rest-heroes
        application: heroes-service
        system: quarkus-super-heroes
        app.kubernetes.io/managed-by: quarkus
        app.openshift.io/runtime: quarkus
        app.kubernetes.io/name: rest-heroes
        app.kubernetes.io/version: java21-latest
        app.kubernetes.io/part-of: heroes-service
    spec:
      containers:
        - env:
            - name: QUARKUS_OTEL_K8S_RESOURCE_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: QUARKUS_OTEL_K8S_RESOURCE_POD_NAME
              valueFrom:
                fieldRef:
                  fieldPath: metadata.name
            - name: QUARKUS_OTEL_K8S_RESOURCE_POD_UID
              valueFrom:
                fieldRef:
                  fieldPath: metadata.uid
            - name: QUARKUS_OTEL_K8S_RESOURCE_NODE_NAME
              valueFrom:
                fieldRef:
                  fieldPath: spec.nodeName
            - name: QUARKUS_OTEL_K8S_RESOURCE_CONTAINER_NAME
              value: rest-heroes
            - name: QUARKUS_OTEL_K8S_RESOURCE_DEPLOYMENT_NAME
              value: rest-heroes
          image: quay.io/quarkus-super-heroes/rest-heroes:java21-latest
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/live
              port: 8083
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          name: rest-heroes
          ports:
            - containerPort: 8083
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/ready
              port: 8083
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          resources:
            limits:
              memory: 768Mi
            requests:
              memory: 256Mi
          startupProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/started
              port: 8083
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
      terminationGracePeriodSeconds: 10
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    app.openshift.io/vcs-uri: <<unknown>>
    app.quarkus.io/vcs-ref: main
    app.openshift.io/vcs-ref: main
    app.openshift.io/connects-to: "heroes-db,otel-lgtm"
    app.quarkus.io/vcs-url: https://github.com/quarkusio/quarkus-super-heroes
    app.openshift.io/vcs-url: https://github.com/quarkusio/quarkus-super-heroes
    app.quarkus.io/quarkus-version: 3.36.1
    app.quarkus.io/vcs-uri: https://github.com/quarkusio/quarkus-super-heroes.git
    app.quarkus.io/build-timestamp: 2026-06-12 - 20:43:19 +0000
  labels:
    app.kubernetes.io/name: rest-heroes
    app.kubernetes.io/part-of: heroes-service
    app.kubernetes.io/version: java21-latest
    app: rest-heroes
    application: heroes-service
    system: quarkus-super-heroes
    app.kubernetes.io/managed-by: quarkus
    app.openshift.io/runtime: quarkus
  name: rest-heroes
spec:
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: rest-heroes
#######################################################################
# THIS FILE IS AUTOMATICALLY GENERATED DURING CI/CD.
# ANY LOCAL CHANGES YOU MAKE SHOULD NOT BE COMMITTED TO SOURCE CONTROL.
#######################################################################

---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.openshift.io/vcs-uri: <<unknown>>
    app.quarkus.io/vcs-ref: main
    app.openshift.io/vcs-ref: main
    app.openshift.io/connects-to: otel-lgtm
    app.quarkus.io/vcs-url: https://github.com/quarkusio/quarkus-super-heroes
    app.openshift.io/vcs-url: https://github.com/quarkusio/quarkus-super-heroes
    app.quarkus.io/quarkus-version: 3.36.1
    app.quarkus.io/vcs-uri: https://github.com/quarkusio/quarkus-super-heroes.git
    app.quarkus.io/build-timestamp: 2026-06-12 - 20:41:52 +0000
  labels:
    app.kubernetes.io/name: rest-narration
    app.kubernetes.io/part-of: narration-service
    app.kubernetes.io/version: java21-latest
    app: rest-narration
    application: narration-service
    system: quarkus-super-heroes
    app.kubernetes.io/managed-by: quarkus
    app.openshift.io/runtime: quarkus
  name: rest-narration
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8087
  selector:
    app.kubernetes.io/name: rest-narration
    app.kubernetes.io/part-of: narration-service
    app.kubernetes.io/version: java21-latest
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.openshift.io/vcs-uri: <<unknown>>
    app.quarkus.io/vcs-ref: main
    app.openshift.io/vcs-ref: main
    app.openshift.io/connects-to: otel-lgtm
    app.quarkus.io/vcs-url: https://github.com/quarkusio/quarkus-super-heroes
    app.openshift.io/vcs-url: https://github.com/quarkusio/quarkus-super-heroes
    app.quarkus.io/quarkus-version: 3.36.1
    app.quarkus.io/vcs-uri: https://github.com/quarkusio/quarkus-super-heroes.git
    app.quarkus.io/build-timestamp: 2026-06-12 - 20:41:52 +0000
  labels:
    app: rest-narration
    application: narration-service
    system: quarkus-super-heroes
    app.kubernetes.io/managed-by: quarkus
    app.openshift.io/runtime: quarkus
    app.kubernetes.io/name: rest-narration
    app.kubernetes.io/part-of: narration-service
    app.kubernetes.io/version: java21-latest
  name: rest-narration
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: rest-narration
      app.kubernetes.io/part-of: narration-service
      app.kubernetes.io/version: java21-latest
  template:
    metadata:
      annotations:
        alpha.image.policy.openshift.io/resolve-names: '*'
        app.openshift.io/vcs-uri: <<unknown>>
        app.quarkus.io/vcs-ref: main
        app.openshift.io/vcs-ref: main
        app.openshift.io/connects-to: otel-lgtm
        app.quarkus.io/vcs-url: https://github.com/quarkusio/quarkus-super-heroes
        app.openshift.io/vcs-url: https://github.com/quarkusio/quarkus-super-heroes
        app.quarkus.io/quarkus-version: 3.36.1
        app.quarkus.io/vcs-uri: https://github.com/quarkusio/quarkus-super-heroes.git
        app.quarkus.io/build-timestamp: 2026-06-12 - 20:41:52 +0000
      labels:
        app: rest-narration
        application: narration-service
        system: quarkus-super-heroes
        app.kubernetes.io/managed-by: quarkus
        app.openshift.io/runtime: quarkus
        app.kubernetes.io/name: rest-narration
        app.kubernetes.io/part-of: narration-service
        app.kubernetes.io/version: java21-latest
    spec:
      containers:
        - env:
            - name: quarkus.wiremock.devservices.port
              value: ""
            - name: OPENAI_API_KEY
              value: change-me
            - name: QUARKUS_OTEL_K8S_RESOURCE_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: QUARKUS_OTEL_K8S_RESOURCE_POD_NAME
              valueFrom:
                fieldRef:
                  fieldPath: metadata.name
            - name: QUARKUS_OTEL_K8S_RESOURCE_POD_UID
              valueFrom:
                fieldRef:
                  fieldPath: metadata.uid
            - name: QUARKUS_OTEL_K8S_RESOURCE_NODE_NAME
              valueFrom:
                fieldRef:
                  fieldPath: spec.nodeName
            - name: QUARKUS_OTEL_K8S_RESOURCE_CONTAINER_NAME
              value: rest-narration
            - name: QUARKUS_OTEL_K8S_RESOURCE_DEPLOYMENT_NAME
              value: rest-narration
          image: quay.io/quarkus-super-heroes/rest-narration:java21-latest
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/live
              port: 8087
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          name: rest-narration
          ports:
            - containerPort: 8087
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/ready
              port: 8087
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          resources:
            limits:
              memory: 768Mi
            requests:
              memory: 256Mi
          startupProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/started
              port: 8087
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
      terminationGracePeriodSeconds: 10
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    app.openshift.io/vcs-uri: <<unknown>>
    app.quarkus.io/vcs-ref: main
    app.openshift.io/vcs-ref: main
    app.openshift.io/connects-to: otel-lgtm
    app.quarkus.io/vcs-url: https://github.com/quarkusio/quarkus-super-heroes
    app.openshift.io/vcs-url: https://github.com/quarkusio/quarkus-super-heroes
    app.quarkus.io/quarkus-version: 3.36.1
    app.quarkus.io/vcs-uri: https://github.com/quarkusio/quarkus-super-heroes.git
    app.quarkus.io/build-timestamp: 2026-06-12 - 20:41:52 +0000
  labels:
    app.kubernetes.io/name: rest-narration
    app.kubernetes.io/part-of: narration-service
    app.kubernetes.io/version: java21-latest
    app: rest-narration
    application: narration-service
    system: quarkus-super-heroes
    app.kubernetes.io/managed-by: quarkus
    app.openshift.io/runtime: quarkus
  name: rest-narration
spec:
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: rest-narration
#######################################################################
# THIS FILE IS AUTOMATICALLY GENERATED DURING CI/CD.
# ANY LOCAL CHANGES YOU MAKE SHOULD NOT BE COMMITTED TO SOURCE CONTROL.
#######################################################################

---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: locations-db
    application: locations-service
    system: quarkus-super-heroes
  name: locations-db
spec:
  ports:
    - port: 3306
      protocol: TCP
      targetPort: 3306
  selector:
    name: locations-db
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.openshift.io/vcs-uri: <<unknown>>
    app.quarkus.io/vcs-ref: main
    app.openshift.io/vcs-ref: main
    app.openshift.io/connects-to: "locations-db,otel-lgtm"
    app.quarkus.io/vcs-url: https://github.com/quarkusio/quarkus-super-heroes
    app.openshift.io/vcs-url: https://github.com/quarkusio/quarkus-super-heroes
    app.quarkus.io/quarkus-version: 3.36.1
    app.quarkus.io/vcs-uri: https://github.com/quarkusio/quarkus-super-heroes.git
    app.quarkus.io/build-timestamp: 2026-06-12 - 20:41:01 +0000
  labels:
    app.kubernetes.io/name: grpc-locations
    app.kubernetes.io/part-of: locations-service
    app.kubernetes.io/version: java21-latest
    app: grpc-locations
    application: locations-service
    system: quarkus-super-heroes
    app.kubernetes.io/managed-by: quarkus
    app.openshift.io/runtime: quarkus
  name: grpc-locations
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8089
  selector:
    app.kubernetes.io/name: grpc-locations
    app.kubernetes.io/part-of: locations-service
    app.kubernetes.io/version: java21-latest
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: locations-db
    application: locations-service
    system: quarkus-super-heroes
    app.kubernetes.io/part-of: locations-service
    app.openshift.io/runtime: mariadb
  name: locations-db
spec:
  replicas: 1
  selector:
    matchLabels:
      name: locations-db
  template:
    metadata:
      annotations:
        alpha.image.policy.openshift.io/resolve-names: '*'
      labels:
        application: locations-service
        name: locations-db
    spec:
      containers:
        - env:
            - name: MARIADB_SKIP_TEST_DB
              value: "true"
          image: mariadb:12-ubi10
          name: locations-db
          ports:
            - containerPort: 3306
          resources:
            limits:
              memory: 256Mi
            requests:
              memory: 64Mi
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: locations-db-data
            - mountPath: /run/mariadb
              name: locations-db-run
            - mountPath: /docker-entrypoint-initdb.d
              name: locations-initdata
      volumes:
        - emptyDir: {}
          name: locations-db-data
        - emptyDir: {}
          name: locations-db-run
        - emptyDir: {}
          name: locations-initdata
        - configMap:
            name: locations-db-init
          name: locations-db-init
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.openshift.io/vcs-uri: <<unknown>>
    app.quarkus.io/vcs-ref: main
    app.openshift.io/vcs-ref: main
    app.openshift.io/connects-to: "locations-db,otel-lgtm"
    app.quarkus.io/vcs-url: https://github.com/quarkusio/quarkus-super-heroes
    app.openshift.io/vcs-url: https://github.com/quarkusio/quarkus-super-heroes
    app.quarkus.io/quarkus-version: 3.36.1
    app.quarkus.io/vcs-uri: https://github.com/quarkusio/quarkus-super-heroes.git
    app.quarkus.io/build-timestamp: 2026-06-12 - 20:41:01 +0000
  labels:
    app: grpc-locations
    application: locations-service
    system: quarkus-super-heroes
    app.kubernetes.io/managed-by: quarkus
    app.openshift.io/runtime: quarkus
    app.kubernetes.io/name: grpc-locations
    app.kubernetes.io/part-of: locations-service
    app.kubernetes.io/version: java21-latest
  name: grpc-locations
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: grpc-locations
      app.kubernetes.io/part-of: locations-service
      app.kubernetes.io/version: java21-latest
  template:
    metadata:
      annotations:
        alpha.image.policy.openshift.io/resolve-names: '*'
        app.openshift.io/vcs-uri: <<unknown>>
        app.quarkus.io/vcs-ref: main
        app.openshift.io/vcs-ref: main
        app.openshift.io/connects-to: "locations-db,otel-lgtm"
        app.quarkus.io/vcs-url: https://github.com/quarkusio/quarkus-super-heroes
        app.openshift.io/vcs-url: https://github.com/quarkusio/quarkus-super-heroes
        app.quarkus.io/quarkus-version: 3.36.1
        app.quarkus.io/vcs-uri: https://github.com/quarkusio/quarkus-super-heroes.git
        app.quarkus.io/build-timestamp: 2026-06-12 - 20:41:01 +0000
      labels:
        app: grpc-locations
        application: locations-service
        system: quarkus-super-heroes
        app.kubernetes.io/managed-by: quarkus
        app.openshift.io/runtime: quarkus
        app.kubernetes.io/name: grpc-locations
        app.kubernetes.io/part-of: locations-service
        app.kubernetes.io/version: java21-latest
    spec:
      containers:
        - env:
            - name: QUARKUS_OTEL_K8S_RESOURCE_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: QUARKUS_OTEL_K8S_RESOURCE_POD_NAME
              valueFrom:
                fieldRef:
                  fieldPath: metadata.name
            - name: QUARKUS_OTEL_K8S_RESOURCE_POD_UID
              valueFrom:
                fieldRef:
                  fieldPath: metadata.uid
            - name: QUARKUS_OTEL_K8S_RESOURCE_NODE_NAME
              valueFrom:
                fieldRef:
                  fieldPath: spec.nodeName
            - name: QUARKUS_OTEL_K8S_RESOURCE_CONTAINER_NAME
              value: grpc-locations
            - name: QUARKUS_OTEL_K8S_RESOURCE_DEPLOYMENT_NAME
              value: grpc-locations
          image: quay.io/quarkus-super-heroes/grpc-locations:java21-latest
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/live
              port: 8089
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          name: grpc-locations
          ports:
            - containerPort: 8089
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/ready
              port: 8089
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          resources:
            limits:
              memory: 768Mi
            requests:
              memory: 256Mi
          startupProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/started
              port: 8089
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
      terminationGracePeriodSeconds: 10
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    app.openshift.io/vcs-uri: <<unknown>>
    app.quarkus.io/vcs-ref: main
    app.openshift.io/vcs-ref: main
    app.openshift.io/connects-to: "locations-db,otel-lgtm"
    app.quarkus.io/vcs-url: https://github.com/quarkusio/quarkus-super-heroes
    app.openshift.io/vcs-url: https://github.com/quarkusio/quarkus-super-heroes
    app.quarkus.io/quarkus-version: 3.36.1
    app.quarkus.io/vcs-uri: https://github.com/quarkusio/quarkus-super-heroes.git
    app.quarkus.io/build-timestamp: 2026-06-12 - 20:41:01 +0000
  labels:
    app.kubernetes.io/name: grpc-locations
    app.kubernetes.io/part-of: locations-service
    app.kubernetes.io/version: java21-latest
    app: grpc-locations
    application: locations-service
    system: quarkus-super-heroes
    app.kubernetes.io/managed-by: quarkus
    app.openshift.io/runtime: quarkus
  name: grpc-locations
spec:
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: grpc-locations
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: fights-db
    application: fights-service
    system: quarkus-super-heroes
  name: fights-db
spec:
  ports:
    - port: 27017
      protocol: TCP
      targetPort: 27017
  selector:
    name: fights-db
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: fights-kafka
    application: fights-service
    system: quarkus-super-heroes
  name: fights-kafka
spec:
  ports:
    - port: 9092
      protocol: TCP
      targetPort: 9092
  selector:
    name: fights-kafka
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: apicurio
    application: fights-service
    system: quarkus-super-heroes
  name: apicurio
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    name: apicurio
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.openshift.io/vcs-uri: <<unknown>>
    app.quarkus.io/vcs-ref: main
    app.openshift.io/vcs-ref: main
    app.openshift.io/connects-to: "fights-db,fights-kafka,apicurio,rest-villains,rest-heroes,rest-narration,grpc-locations,otel-lgtm"
    app.quarkus.io/vcs-url: https://github.com/quarkusio/quarkus-super-heroes
    app.openshift.io/vcs-url: https://github.com/quarkusio/quarkus-super-heroes
    app.quarkus.io/quarkus-version: 3.36.1
    app.quarkus.io/vcs-uri: https://github.com/quarkusio/quarkus-super-heroes.git
    app.quarkus.io/build-timestamp: 2026-06-12 - 20:44:14 +0000
  labels:
    app.kubernetes.io/name: rest-fights
    app.kubernetes.io/part-of: fights-service
    app.kubernetes.io/version: java21-latest
    app: rest-fights
    application: fights-service
    system: quarkus-super-heroes
    app.kubernetes.io/managed-by: quarkus
    app.openshift.io/runtime: quarkus
  name: rest-fights
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8082
  selector:
    app.kubernetes.io/name: rest-fights
    app.kubernetes.io/part-of: fights-service
    app.kubernetes.io/version: java21-latest
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: fights-db
    application: fights-service
    system: quarkus-super-heroes
    app.kubernetes.io/part-of: fights-service
    app.openshift.io/runtime: mongodb
  name: fights-db
spec:
  replicas: 1
  selector:
    matchLabels:
      name: fights-db
  template:
    metadata:
      annotations:
        alpha.image.policy.openshift.io/resolve-names: '*'
      labels:
        application: fights-service
        name: fights-db
        system: quarkus-super-heroes
    spec:
      containers:
        - envFrom:
            - secretRef:
                name: fights-db-config
          image: docker.io/mongo:8
          name: fights-db
          ports:
            - containerPort: 27017
          resources:
            limits:
              memory: 512Mi
            requests:
              memory: 128Mi
          volumeMounts:
            - mountPath: /data/db
              name: fights-db-data
            - mountPath: /docker-entrypoint-initdb.d
              name: fights-initdata
      volumes:
        - emptyDir: {}
          name: fights-db-data
        - emptyDir: {}
          name: fights-initdata
        - configMap:
            name: fights-db-init
          name: fights-db-init
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: fights-kafka
    application: fights-service
    system: quarkus-super-heroes
    app.kubernetes.io/part-of: fights-service
    app.openshift.io/runtime: amq
  name: fights-kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      name: fights-kafka
  template:
    metadata:
      annotations:
        alpha.image.policy.openshift.io/resolve-names: '*'
      labels:
        application: fights-service
        name: fights-kafka
        system: quarkus-super-heroes
    spec:
      containers:
        - env:
            - name: LOG_DIR
              value: /tmp/logs
            - name: KAFKA_NODE_ID
              value: "1"
            - name: KAFKA_PROCESS_ROLES
              value: "broker,controller"
            - name: KAFKA_CONTROLLER_QUORUM_VOTERS
              value: 1@localhost:9093
            - name: KAFKA_LISTENERS
              value: "PLAINTEXT://:9092,CONTROLLER://:9093"
            - name: KAFKA_ADVERTISED_LISTENERS
              value: PLAINTEXT://fights-kafka:9092
            - name: KAFKA_CONTROLLER_LISTENER_NAMES
              value: CONTROLLER
            - name: KAFKA_LISTENER_SECURITY_PROTOCOL_MAP
              value: "CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT"
            - name: KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR
              value: "1"
            - name: KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR
              value: "1"
            - name: KAFKA_TRANSACTION_STATE_LOG_MIN_ISR
              value: "1"
          image: apache/kafka-native:4.2.0
          name: fights-kafka
          ports:
            - containerPort: 9092
          resources:
            limits:
              memory: 768Mi
            requests:
              memory: 128Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: apicurio
    application: fights-service
    system: quarkus-super-heroes
    app.kubernetes.io/part-of: fights-service
    app.kubernetes.io/name: apicurio
    app.kubernetes.io/version: 2.2.3.Final
    app.openshift.io/runtime: apicurio
  name: apicurio
spec:
  replicas: 1
  selector:
    matchLabels:
      name: apicurio
  template:
    metadata:
      annotations:
        alpha.image.policy.openshift.io/resolve-names: '*'
      labels:
        application: fights-service
        name: apicurio
        system: quarkus-super-heroes
    spec:
      containers:
        - env:
            - name: REGISTRY_AUTH_ANONYMOUS_READ_ACCESS_ENABLED
              value: "true"
          image: quay.io/apicurio/apicurio-registry:3.1.7
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /health/live
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 10
          name: apicurio
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /health/ready
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 10
          resources:
            limits:
              memory: 768Mi
            requests:
              memory: 128Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.openshift.io/vcs-uri: <<unknown>>
    app.quarkus.io/vcs-ref: main
    app.openshift.io/vcs-ref: main
    app.openshift.io/connects-to: "fights-db,fights-kafka,apicurio,rest-villains,rest-heroes,rest-narration,grpc-locations,otel-lgtm"
    app.quarkus.io/vcs-url: https://github.com/quarkusio/quarkus-super-heroes
    app.openshift.io/vcs-url: https://github.com/quarkusio/quarkus-super-heroes
    app.quarkus.io/quarkus-version: 3.36.1
    app.quarkus.io/vcs-uri: https://github.com/quarkusio/quarkus-super-heroes.git
    app.quarkus.io/build-timestamp: 2026-06-12 - 20:44:14 +0000
  labels:
    app: rest-fights
    application: fights-service
    system: quarkus-super-heroes
    app.kubernetes.io/managed-by: quarkus
    app.openshift.io/runtime: quarkus
    app.kubernetes.io/version: java21-latest
    app.kubernetes.io/part-of: fights-service
    app.kubernetes.io/name: rest-fights
  name: rest-fights
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/version: java21-latest
      app.kubernetes.io/part-of: fights-service
      app.kubernetes.io/name: rest-fights
  template:
    metadata:
      annotations:
        alpha.image.policy.openshift.io/resolve-names: '*'
        app.openshift.io/vcs-uri: <<unknown>>
        app.quarkus.io/vcs-ref: main
        app.openshift.io/vcs-ref: main
        app.openshift.io/connects-to: "fights-db,fights-kafka,apicurio,rest-villains,rest-heroes,rest-narration,grpc-locations,otel-lgtm"
        app.quarkus.io/vcs-url: https://github.com/quarkusio/quarkus-super-heroes
        app.openshift.io/vcs-url: https://github.com/quarkusio/quarkus-super-heroes
        app.quarkus.io/quarkus-version: 3.36.1
        app.quarkus.io/vcs-uri: https://github.com/quarkusio/quarkus-super-heroes.git
        app.quarkus.io/build-timestamp: 2026-06-12 - 20:44:14 +0000
      labels:
        app: rest-fights
        application: fights-service
        system: quarkus-super-heroes
        app.kubernetes.io/managed-by: quarkus
        app.openshift.io/runtime: quarkus
        app.kubernetes.io/version: java21-latest
        app.kubernetes.io/part-of: fights-service
        app.kubernetes.io/name: rest-fights
    spec:
      containers:
        - env:
            - name: quarkus.microcks.default.grpc.port
              value: ""
            - name: quarkus.microcks.default.http.host
              value: ""
            - name: quarkus.microcks.default.grpc.host
              value: ""
            - name: quarkus.microcks.default.http.port
              value: ""
            - name: QUARKUS_OTEL_K8S_RESOURCE_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: QUARKUS_OTEL_K8S_RESOURCE_POD_NAME
              valueFrom:
                fieldRef:
                  fieldPath: metadata.name
            - name: QUARKUS_OTEL_K8S_RESOURCE_POD_UID
              valueFrom:
                fieldRef:
                  fieldPath: metadata.uid
            - name: QUARKUS_OTEL_K8S_RESOURCE_NODE_NAME
              valueFrom:
                fieldRef:
                  fieldPath: spec.nodeName
            - name: QUARKUS_OTEL_K8S_RESOURCE_CONTAINER_NAME
              value: rest-fights
            - name: QUARKUS_OTEL_K8S_RESOURCE_DEPLOYMENT_NAME
              value: rest-fights
          image: quay.io/quarkus-super-heroes/rest-fights:java21-latest
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/live
              port: 8082
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          name: rest-fights
          ports:
            - containerPort: 8082
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/ready
              port: 8082
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          resources:
            limits:
              memory: 768Mi
            requests:
              memory: 256Mi
          startupProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/started
              port: 8082
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
      serviceAccountName: rest-fights
      terminationGracePeriodSeconds: 10
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: apicurio
    application: fights-service
    system: quarkus-super-heroes
    app.openshift.io/runtime: apicurio
  name: apicurio
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: apicurio
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    app.openshift.io/vcs-uri: <<unknown>>
    app.quarkus.io/vcs-ref: main
    app.openshift.io/vcs-ref: main
    app.openshift.io/connects-to: "fights-db,fights-kafka,apicurio,rest-villains,rest-heroes,rest-narration,grpc-locations,otel-lgtm"
    app.quarkus.io/vcs-url: https://github.com/quarkusio/quarkus-super-heroes
    app.openshift.io/vcs-url: https://github.com/quarkusio/quarkus-super-heroes
    app.quarkus.io/quarkus-version: 3.36.1
    app.quarkus.io/vcs-uri: https://github.com/quarkusio/quarkus-super-heroes.git
    app.quarkus.io/build-timestamp: 2026-06-12 - 20:44:14 +0000
    haproxy.router.openshift.io/timeout: 150s
  labels:
    app.kubernetes.io/name: rest-fights
    app.kubernetes.io/part-of: fights-service
    app.kubernetes.io/version: java21-latest
    app: rest-fights
    application: fights-service
    system: quarkus-super-heroes
    app.kubernetes.io/managed-by: quarkus
    app.openshift.io/runtime: quarkus
  name: rest-fights
spec:
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: rest-fights
